fixed displayed logo on mobile and sidenav scroll bugs

--- a/src/app/main-component/main-component.component.scss
+++ b/src/app/main-component/main-component.component.scss
@@ -67,7 +67,7 @@
   .side-nav-container {
     position: absolute;
     z-index: 101;
-    width: 96%;
+    width: 100%;
     // height: 100%;
     justify-content: center;
     min-width: unset !important;
